e2e/registry/ingress/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: registry-ingress
  labels:
    chart: registry

spec:
  concurrent: true
  timeouts:
    cleanup: 60s

  bindings:
    - name: arguments
      value: >-
        --set=secrets.storage.accessKey.value=accessKey
        --set=secrets.storage.secretKey.value=secretKey
        --set=secrets.storage.endpoint.value=s3mock
        --set=secrets.storage.bucket.value=test
        --set=secrets.storage.region.value=test
        --set=secrets.storage.secure.value=false
        --set=ingress.enabled=true
        --set=ingress.hosts[0].host=registry.local
        --set=ingress.hosts[0].paths[0].path=/
        --set=ingress.hosts[0].paths[0].pathType=ImplementationSpecific

  steps:
    - name: Install S3Mock
      use:
        template: ../../_lib/s3mock.step.yaml
        with:
          bindings:
            - name: namespace
              value: ($namespace)

    - name: Install chart
      use:
        template: ../_lib/helm-install.step.yaml
        with:
          bindings:
            - name: arguments
              value: ($arguments)
            - name: namespace
              value: ($namespace)

    - name: Validate core installation
      use:
        template: ../_lib/validate-core-installation.step.yaml
        with:
          bindings:
            - name: namespace
              value: ($namespace)

    - name: Validate Ingress
      try:
        - assert:
            resource:
              apiVersion: networking.k8s.io/v1
              kind: Ingress
              metadata:
                name: (join('-', [$namespace, 'registry']))
              spec:
                rules:
                  - host: registry.local
              status:
                loadBalancer:
                  ingress:
                    - {}
                    - {}
